bk_ida/gobmkida/c2/find_common_libs
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_common_libs/src/engine/board.c:2523:21: error: subscripted value is not an array, pointer, or vector
v16 = ++liberty_mark[0]; 
        ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_common_libs/src/engine/board.c:2583:4: error: use of undeclared identifier 'byte_9B389F'
|| byte_9B389F[v21] == v22 && string[239].neighborlist[v21 + 160] == string_number[v11] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_common_libs/src/engine/board.c:2584:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v21] == v22 && string[239].neighborlist[v21 + 141] == string_number[v11] 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_common_libs/src/obj/1/board.o] Error 1
